--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@ Present activities include deep learning platforms, reference designs, and custo
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">3D Object Detection</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <p class="mb-0 text-white-50">Familiarity with Point Cloud data and 3D Object Detection.</p>
 									<br></br>
-                                    <p class="mb-0 text-white-50">http://avnet.me/vitis-ai-1.3-blog</p>
+                                    <p class="mb-0 text-white-50"></p>
+									<a href="http://avnet.me/vitis-ai-1.4-project">3D Object Detection</a>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -108,9 +109,9 @@ Present activities include deep learning platforms, reference designs, and custo
                                     <h4 class="text-white">Stereo Processing</h4>
                                     <p class="mb-0 text-white-50">Familiarity with stereo processing.  From stereo camera calibration, to depth estimation, to stereo neural inference.</p>
 									<br></br>
-                                    <p class="mb-0 text-white-50">http://avnet.me/u96v2-dualcam-2021.2-stereo-calibration</p>
+									<a href="http://avnet.me/u96v2-dualcam-2021.2-stereo-calibration">Stereo Calibration</a>
 									<br></br>
-                                    <p class="mb-0 text-white-50">http://avnet.me/vitis-ai-1.4-dualcam</p>
+									<a href="http://avnet.me/vitis-ai-2.0-dualcam">Stereo Neural Inference</a>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -128,7 +129,9 @@ Present activities include deep learning platforms, reference designs, and custo
                                     <h4 class="text-white">2D Classification, Detection, and Segmentation</h4>
                                     <p class="mb-0 text-white-50">Strong Experience with 2D models, including image classification, object detection, and image segmentation.</p>
 									<br></br>
-                                    <p class="mb-0 text-white-50">http://avnet.me/kria-tutorial</p>
+									<a href="http://avnet.me/kria-tutorial">Getting Started with the Kria KV260 Vision AI Kit</a>
+									<br></br>
+									<a href="http://avnet.me/vitis-ai-2.0-project">Vitis-AI on the Avnet Platforms</a>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -146,7 +149,12 @@ Present activities include deep learning platforms, reference designs, and custo
                                     <h4 class="text-white">Custom DataSet and Training</h4>
                                     <p class="mb-0 text-white-50">Experience with curating custom datasets and exploring model architectures for classification and detection models.</p>
 									<br></br>
-                                    <p class="mb-0 text-white-50">http://avnet.me/vitis-ai-1.3-dobble</p>
+									<a href="http://avnet.me/dobble">The Dobble Challenge</a>
+									<br></br>
+									<a href="http://avnet.me/dobble-training">Training the Dobble Challenge</a>
+									<br></br>
+									<a href="http://avnet.me/vitis-ai-1.3-dobble">Deploying the Dobble Challenge on Ultra96-V2</a>
+                                    <p class="mb-0 text-white-50"></p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -164,7 +172,10 @@ Present activities include deep learning platforms, reference designs, and custo
                                     <h4 class="text-white">Augmented Reality</h4>
                                     <p class="mb-0 text-white-50">Familiarity with marker-based augmented reality.</p>
 									<br></br>
-                                    <p class="mb-0 text-white-50">http://avnet.me/gst-marker-detect</p>
+                                    <p class="mb-0 text-white-50"></p>
+									<a href="http://avnet.me/gst-marker-detect">Marker Detection</a>
+									<br></br>
+									<a href="http://avnet.me/gst-aaswb">Automatic Activation of a Simple White Balance (AASWB)</a>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -226,16 +237,6 @@ Present activities include deep learning platforms, reference designs, and custo
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
-                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">350 Franciscains, Quebec QC</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
@@ -253,6 +254,16 @@ Present activities include deep learning platforms, reference designs, and custo
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-4 mb-3 mb-md-0">
+                        <div class="card py-4 h-100">
+                            <div class="card-body text-center">
+                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                                <h4 class="text-uppercase m-0">Address</h4>
+                                <hr class="my-4 mx-auto" />
+                                <div class="small text-black-50">350 rue des Franciscains, Québec QC</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="social d-flex justify-content-center">
 					<a class="mx-2" href="https://www.linkedin.com/in/albertabeef/"><i class="fab fa-linkedin"></i></a>
@@ -264,7 +275,7 @@ Present activities include deep learning platforms, reference designs, and custo
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2022</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; AlbertaBeef 2022</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
