portfolio: index.html: up it up a little.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Present activities include deep learning platforms, reference designs, and custo
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Stereo Processing</h4>
-                                    <p class="mb-0 text-white-50">Familiarity with stereo processing.  From stereo camera calibration, to depth estimation, to stereo neural inference.</p>
+                                    <p class="mb-0 text-white-50">Solid Experience with stereo processing.  From stereo camera calibration, to depth estimation, to stereo neural inference.</p>
 									<br></br>
 									<a href="http://avnet.me/u96v2-dualcam-2021.2-stereo-calibration">Stereo Calibration</a>
 									<br></br>
