portfolio: update icons for Hackster/Element14 links.

--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@ Present activities include deep learning platforms, reference designs, and custo
                     <a class="mx-2" href="https://www.facebook.com/mario.bergeron.549"><i class="fab fa-facebook-f"></i></a>
                     <a class="mx-2" href="https://twitter.com/mariobergeron"><i class="fab fa-twitter"></i></a>
                     <a class="mx-2" href="http://github.com/AlbertaBeef/"><i class="fab fa-github"></i></a>
-                    <a class="mx-2" href="http://hackster.io/AlbertaBeef/"><i class="fab fa-hackster"></i></a>
+                    <a class="mx-2" href="http://hackster.io/AlbertaBeef/"><i class="fa-solid fa-user"></i></a>
+                    <a class="mx-2" href="http://element14.com/AlbertaBeef/"><i class="fa-regular fa-user"></i></a>
                 </div>
             </div>
         </section>
