update image/link for 2D classification/detection/segmentation project.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Present activities include deep learning platforms, reference designs, and custo
 				<br></br>			
                 <!-- Project 3 -->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/vitis_ai_detection_models.gif" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/vitis_ai_multitaskv3.gif" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -129,7 +129,7 @@ Present activities include deep learning platforms, reference designs, and custo
                                     <h4 class="text-white">2D Classification, Detection, and Segmentation</h4>
                                     <p class="mb-0 text-white-50">Strong Experience with 2D models, including image classification, object detection, and image segmentation.</p>
 									<br></br>
-									<a href="http://avnet.me/kria-tutorial">Getting Started with the Kria KV260 Vision AI Kit</a>
+									<a href="http://avnet.me/avnet-zub1cg-sbc-2021.2">Accelerated Edge AI</a>
 									<br></br>
 									<a href="http://avnet.me/vitis-ai-2.0-project">Vitis-AI on the Avnet Platforms</a>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
