Add new project : Applying AI to Climbing.

--- a/index.html
+++ b/index.html
@@ -182,6 +182,28 @@ Present activities include deep learning platforms, reference designs, and custo
                         </div>
                     </div>
                 </div>
+                <!-- Project 6 -->
+                <div class="row gx-0 justify-content-center">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/yolov7_climbing_comparison.gif" alt="..." /></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">Applying AI to Climbing</h4>
+                                    <p class="mb-0 text-white-50">Exploration of computer vision and machine learning, applied to rock climbing..</p>
+									<br></br>
+                                    <p class="mb-0 text-white-50"></p>
+									<a href="http://avnet.me/rock-climbing-ai-part1">Part 1 - The Long Road to the Tokyo Olympics</a>
+									<br></br>
+									<a href="http://avnet.me/rock-climbing-ai-part2">Part 2 - Deep Learning meets the Odd Human Data Set</a>
+									<br></br>
+									<a href="http://avnet.me/rock-climbing-ai-part3">Part 3 - Pose Estimation with YOLOv7</a>
+                                    <hr class="d-none d-lg-block mb-0 me-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 		
