Add new project : Applying AI to robotics

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Present activities include deep learning platforms, reference designs, and custo
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Applying AI to Climbing</h4>
-                                    <p class="mb-0 text-white-50">Exploration of computer vision and machine learning, applied to rock climbing..</p>
+                                    <p class="mb-0 text-white-50">Exploration of computer vision and machine learning, applied to rock climbing...</p>
 									<br></br>
                                     <p class="mb-0 text-white-50"></p>
 									<a href="http://avnet.me/rock-climbing-ai-part1">Part 1 - The Long Road to the Tokyo Olympics</a>
@@ -199,6 +199,29 @@ Present activities include deep learning platforms, reference designs, and custo
 									<a href="http://avnet.me/rock-climbing-ai-part2">Part 2 - Deep Learning meets the Odd Human Data Set</a>
 									<br></br>
 									<a href="http://avnet.me/rock-climbing-ai-part3">Part 3 - Pose Estimation with YOLOv7</a>
+                                    <hr class="d-none d-lg-block mb-0 me-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<br></br>			
+                <!-- Project 7 -->
+                <div class="row gx-0 justify-content-center">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/zu1_vision_webinar2_demo.gif" alt="..." /></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">Applying AI to Robotics</h4>
+                                    <p class="mb-0 text-white-50">Exploration of computer vision and machine learning, applied to robotics...</p>
+									<br></br>
+                                    <p class="mb-0 text-white-50"></p>
+									<a href="http://avnet.me/avnet-zub1cg-2022.2-part4">Adding Support for ROS2</a>
+									<br></br>
+									<a href="http://avnet.me/vitis-ai-3.0-robot-control">Controlling Robots with Hand Signs</a>
+									<br></br>
+									<a href="http://avnet.me/avnet-zub1cg-2022.2-webinar">Webinar Series : How to Control Robots with Gestures </a>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
