--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-4 col-lg-5">
-						<img class="img-fluid mb-3 mb-lg-0" src="assets/img/mario_bergeron_photo_2022_b.jpg" alt="..." />
+						<img class="img-fluid mb-3 mb-lg-0" src="assets/img/mario_bergeron_photo_2024_crop2.jpg" alt="..." />
 					</div>
                     <div class="col-xl-8 col-lg-7">
                         <div class="featured-text text-left text-lg-left">
@@ -222,6 +222,27 @@ Present activities include deep learning platforms, reference designs, and custo
 									<a href="http://avnet.me/vitis-ai-3.0-robot-control">Controlling Robots with Hand Signs</a>
 									<br></br>
 									<a href="http://avnet.me/avnet-zub1cg-2022.2-webinar">Webinar Series : How to Control Robots with Gestures </a>
+                                    <hr class="d-none d-lg-block mb-0 me-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<br></br>			
+                <!-- Project 8 -->
+                <div class="row gx-0 justify-content-center">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/blaze_exploration.gif" alt="..." /></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">MediaPipe Exploration and Acceleration</h4>
+                                    <p class="mb-0 text-white-50">Exploration of mediapipe models for accelerated deployment to embedded platforms...</p>
+									<br></br>
+                                    <p class="mb-0 text-white-50"></p>
+									<a href="http://github.com/AlbertaBeef/blaze_app_python">MediaPipe Exploration with python</a>
+									<br></br>
+									<a href="https://github.com/AlbertaBeef/blaze_tutorial/tree/2023.1">MediaPipe Accelerated Deployment (Vitis-AI, Hailo-8, ...)</a>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
